--- a/www/index.html
+++ b/www/index.html
@@ -248,42 +248,64 @@
                      data-filter-placeholder="Search">
 
 
-                    <div>
-                        <input type="checkbox" id="aa" onclick="add_number('6000','aa')">
-                        <label for="aa">Sam</label>
+                    <div onclick="add_number('0542688902','1')">
+                        <p>Sam</p>
+                        <!--<input type="checkbox" id="aa" onclick="add_number('6000','aa')">-->
+                        <!--<label for="aa">Sam</label>-->
                     </div>
 
-                    <div>
-                        <input type="checkbox" id="bb" onclick="add_number('8000','bb')">
-                        <label for="bb">Danilo</label>
+                    <div onclick="add_number('0542688904','2')">
+                        <p>Dan</p>
+                        <!--<input type="checkbox" id="aa" onclick="add_number('6000','aa')">-->
+                        <!--<label for="aa">Sam</label>-->
+                    </div>
+                    <!--<hr noshade>-->
+
+                    <div onclick="add_number('0542688904','2')">
+                        <p>Dan</p>
+                        <!--<input type="checkbox" id="aa" onclick="add_number('6000','aa')">-->
+                        <!--<label for="aa">Sam</label>-->
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xs-6"></div>
+
+                                <div class="col-xs-6 align-right" id="2" hidden>
+                                    <i class="zmdi zmdi-check"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
-                    <div>
-                        <input type="checkbox" id="cc" onclick="add_number('9000','cc')">
-                        <label for="cc">Effie</label>
-                        <!--<label>adas</label>-->
-                    </div>
+                    <!--<div>-->
+                    <!--<input type="checkbox" id="bb" onclick="add_number('8000','bb')">-->
+                    <!--<label for="bb">Danilo</label>-->
+                    <!--</div>-->
 
-                    <div>
-                        <input type="checkbox" id="dd" onclick="add_number('1000','dd')">
-                        <label for="dd">Xorla</label>
-                    </div>
+                    <!--<div>-->
+                    <!--<input type="checkbox" id="cc" onclick="add_number('9000','cc')">-->
+                    <!--<label for="cc">Effie</label>-->
+                    <!--&lt;!&ndash;<label>adas</label>&ndash;&gt;-->
+                    <!--</div>-->
 
-                    <div>
-                        <input type="checkbox" id="ee" onclick="add_number('2000','ee')">
-                        <label for="ee">Danny</label>
-                    </div>
+                    <!--<div>-->
+                    <!--<input type="checkbox" id="dd" onclick="add_number('1000','dd')">-->
+                    <!--<label for="dd">Xorla</label>-->
+                    <!--</div>-->
 
-                    <div>
-                        <input type="checkbox" id="ff" onclick="add_number('3000','ff')">
-                        <label for="ff">Max</label>
-                    </div>
+                    <!--<div>-->
+                    <!--<input type="checkbox" id="ee" onclick="add_number('2000','ee')">-->
+                    <!--<label for="ee">Danny</label>-->
+                    <!--</div>-->
 
-                    <div>
-                        <input type="checkbox" id="gg" onchange="add_number('4000','gg')">
-                        <label for="gg">Trump</label>
-                    </div>
+                    <!--<div>-->
+                    <!--<input type="checkbox" id="ff" onclick="add_number('3000','ff')">-->
+                    <!--<label for="ff">Max</label>-->
+                    <!--</div>-->
 
+                    <!--<div>-->
+                    <!--<input type="checkbox" id="gg" onchange="add_number('4000','gg')">-->
+                    <!--<label for="gg">Trump</label>-->
+                    <!--</div>-->
 
                 </div>
             </div>
