--- a/www/index.html
+++ b/www/index.html
@@ -247,29 +247,28 @@
                      data-filter-reveal="false"
                      data-filter-placeholder="Search">
 
-
-                    <div onclick="add_number('0542688902','1')">
-                        <p>Sam</p>
-                        <!--<input type="checkbox" id="aa" onclick="add_number('6000','aa')">-->
-                        <!--<label for="aa">Sam</label>-->
-                    </div>
-
-                    <div onclick="add_number('0542688904','2')">
+                    <div onclick="add_number('0542688902','29')">
                         <p>Dan</p>
-                        <!--<input type="checkbox" id="aa" onclick="add_number('6000','aa')">-->
-                        <!--<label for="aa">Sam</label>-->
-                    </div>
-                    <!--<hr noshade>-->
 
-                    <div onclick="add_number('0542688904','2')">
-                        <p>Dan</p>
-                        <!--<input type="checkbox" id="aa" onclick="add_number('6000','aa')">-->
-                        <!--<label for="aa">Sam</label>-->
                         <div class="container">
                             <div class="row">
                                 <div class="col-xs-6"></div>
 
-                                <div class="col-xs-6 align-right" id="2" hidden>
+                                <div hidden class="col-xs-6 align-right" id="29">
+                                    <i class="zmdi zmdi-check"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div onclick="add_number('0542688905','89')">
+                        <p>Dan</p>
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xs-6"></div>
+
+                                <div hidden class="col-xs-6 align-right" id="89">
                                     <i class="zmdi zmdi-check"></i>
                                 </div>
                             </div>
