--- a/www/index.html
+++ b/www/index.html
@@ -202,10 +202,10 @@
     <div data-role="content">
 
         <div class="nd2-card" style="background-color: white" id="contacts">
-            <div class="container">
+            <div class="container" id="mycontacts">
 
                 <ul data-role="listview" data-filter="true" data-filter-placeholder="Search contacts..."
-                    data-inset="true" id="mycontacts">
+                    data-inset="true">
 
                     <li><a href="#">Apple</a></li>
                     <li><a href="#">Banana</a></li>
