--- a/www/index.html
+++ b/www/index.html
@@ -202,9 +202,10 @@
     <div data-role="content">
 
         <div class="nd2-card" style="background-color: white" id="contacts">
+
             <div class="container" id="mycontacts">
 
-                <ul data-role="listview" data-filter="true" data-filter-placeholder="Search contacts..."
+                <ul data-role="listview" data-autodividers="true" data-filter="true" data-filter-placeholder="Search contacts..."
                     data-inset="true">
 
                     <li><a href="#">Apple</a></li>
