--- a/www/index.html
+++ b/www/index.html
@@ -194,7 +194,7 @@
             <div class="col-xs-6"></div>
             <div class="col-xs-4 col-sm-4">
                 <div class="align-right">
-                    <button style="background-color: #8e0d0e; position: fixed"
+                    <button onclick="get_contacts()" style="background-color: #8e0d0e; position: fixed"
                             class="ui-btn-fab ui-btn-raised clr-warning ui-btn ui-btn-inline waves-effect waves-button waves-effect waves-button">
                         <i class="zmdi zmdi-phone zmd-2x"></i></button>
                 </div>
