--- a/www/index.html
+++ b/www/index.html
@@ -220,78 +220,10 @@
         <div class="nd2-card" style="background-color: white" id="contacts">
 
             <div class="container" id="mycontacts">
-
-                <ul data-role="listview" data-autodividers="true" data-filter="true"
-                    data-filter-placeholder="Search contacts..."
-                    data-inset="true" id="mylistview">
-
-                    <li><a href="#">Apple</a></li>
-
+                <ul data-role="listview" data-autodividers="true" da data-filter="true" data-inset="true">
+                    <li id="1" onclick="test_select(1)"><a href="#">Apple</a></li>
+                    <li id="2" onclick="test_select(2);"><a href="#">Banana</a></li>
                 </ul>
-
-                <!--<div data-clear-btn="true" data-role="content" id="mycontacts" data-filter="true"-->
-                <!--data-filter-reveal="false"-->
-                <!--data-filter-placeholder="Search">-->
-                <!---->
-                <!--<div onclick="add_number('0542688902','29')">-->
-                <!--<p>Dan</p>-->
-                <!---->
-                <!--<div class="container">-->
-                <!--<div class="row">-->
-                <!--<div class="col-xs-6"></div>-->
-
-                <!--<div hidden class="col-xs-6 align-right" id="29">-->
-                <!--<i class="zmdi zmdi-check"></i>-->
-                <!--</div>-->
-                <!--</div>-->
-                <!--</div>-->
-                <!--</div>-->
-
-                <!--<div onclick="add_number('0542688905','89')">-->
-                <!--<p>Dan</p>-->
-
-                <!--<div class="container">-->
-                <!--<div class="row">-->
-                <!--<div class="col-xs-6"></div>-->
-
-                <!--<div hidden class="col-xs-6 align-right" id="89">-->
-                <!--<i class="zmdi zmdi-check"></i>-->
-                <!--</div>-->
-                <!--</div>-->
-                <!--</div>-->
-                <!--</div>-->
-
-                <!--<div>-->
-                <!--<input type="checkbox" id="bb" onclick="add_number('8000','bb')">-->
-                <!--<label for="bb">Danilo</label>-->
-                <!--</div>-->
-
-                <!--<div>-->
-                <!--<input type="checkbox" id="cc" onclick="add_number('9000','cc')">-->
-                <!--<label for="cc">Effie</label>-->
-                <!--&lt;!&ndash;<label>adas</label>&ndash;&gt;-->
-                <!--</div>-->
-
-                <!--<div>-->
-                <!--<input type="checkbox" id="dd" onclick="add_number('1000','dd')">-->
-                <!--<label for="dd">Xorla</label>-->
-                <!--</div>-->
-
-                <!--<div>-->
-                <!--<input type="checkbox" id="ee" onclick="add_number('2000','ee')">-->
-                <!--<label for="ee">Danny</label>-->
-                <!--</div>-->
-
-                <!--<div>-->
-                <!--<input type="checkbox" id="ff" onclick="add_number('3000','ff')">-->
-                <!--<label for="ff">Max</label>-->
-                <!--</div>-->
-
-                <!--<div>-->
-                <!--<input type="checkbox" id="gg" onchange="add_number('4000','gg')">-->
-                <!--<label for="gg">Trump</label>-->
-                <!--</div>-->
-
             </div>
         </div>
         <!---->
