--- a/www/index.html
+++ b/www/index.html
@@ -220,10 +220,12 @@
         <div class="nd2-card" style="background-color: white" id="contacts">
 
             <div class="container" id="mycontacts">
-                <ul data-role="listview" data-autodividers="true" da data-filter="true" data-inset="true">
-                    <li id="1" onclick="test_select(1)"><a href="#">Apple</a></li>
-                    <li id="2" onclick="test_select(2);"><a href="#">Banana</a></li>
+
+                <ul data-role="listview" data-autodividers="true" data-filter="true" data-inset="true" id="mylistview">
+                    <li id="99" onclick="test_select(99)"><a href="#">Apple</a></li>
+                    <li id="100" onclick="test_select(100);"><a href="#">Banana</a></li>
                 </ul>
+
             </div>
         </div>
         <!---->
