--- a/www/index.html
+++ b/www/index.html
@@ -196,7 +196,8 @@
             <div class="col-xs-6"></div>
             <div class="col-xs-4 col-sm-4">
                 <div class="align-right">
-                    <button onclick="get_contacts()" style="background-color: #8e0d0e; position: fixed"
+                    <button onclick="change_page('#contactspage','pop')"
+                            style="background-color: #8e0d0e; position: fixed"
                             class="ui-btn-fab ui-btn-raised clr-warning ui-btn ui-btn-inline waves-effect waves-button waves-effect waves-button">
                         <i class="zmdi zmdi-phone zmd-2x"></i></button>
                 </div>
@@ -223,7 +224,7 @@
 
                 <!--<input type="checkbox" name="checkbox-6" id="1">-->
                 <!--<label for="1">Samuel</label>-->
-<!---->
+                <!---->
                 <!--<input type="checkbox" name="checkbox-6" id="2">-->
                 <!--<label for="2">Dan</label>-->
 
