--- a/www/index.html
+++ b/www/index.html
@@ -220,7 +220,7 @@
 
         <div class="nd2-card" style="background-color: white" id="contacts">
             <!---->
-            <div class="container" id="mycontacts" data-filter="true">
+            <div id="mycontacts" data-filter="true">
 
                 <!--<input type="checkbox" name="checkbox-6" id="1">-->
                 <!--<label for="1">Samuel</label>-->
